# NCC-

./: 11introC++.cpp  16.jumpSearch.cpp  17stackDataStructure.cpp  1ds.cpp  5.cpp  6..cpp  9.cpp  CMakeLists.txt  README.md  WordFinder.cpp  eg.cpp  main.cpp
C++_sch_Project/: CMakeLists.txt  main.cpp  result
C++_sch_Project/C++_sch_Project/: CMakeLists.txt
C++_sch_Project/C++_sch_Project/CHESS/: main.cpp
C++_sch_Project/C++_sch_Project/Main/: main.cpp  main.h
C++_sch_Project/C++_sch_Project/Main/HANG_MAN/: h_t.cpp
C++_sch_Project/C++_sch_Project/SNAKE/: food.h  kbhit.h  main.cpp
C++_sch_Project/C++_sch_Project/SNAKE_for_Window/: main.cpp
C++_sch_Project/CHESS/: chess.cpp  chess.h
C++_sch_Project/Main/: DB.txt  main  main.cpp  main.h
C++_sch_Project/Main/CONNECT_4/: main_for_connect_4.h
C++_sch_Project/Main/HANG_MAN/: hm  main_for_hangman.h
C++_sch_Project/Main/SNAKE/: Snake.h  eg.cpp  main.cpp  main_for_snake.h  snake
C++_sch_Project/Main/TETRIS/: kbhit.h
C++_sch_Project/Main/Tic_Tac_Toe/: main_for_tic_tac_toe.h
C++_sch_Project/Project_for_C++_Window_Ver/: ProjectProjectdb.txt  main.cpp  main.h
C++_sch_Project/Project_for_C++_Window_Ver/CONNECT_4/: main_for_connect_4.h
C++_sch_Project/Project_for_C++_Window_Ver/HANG_MAN/: main_for_hangman.h
C++_sch_Project/Project_for_C++_Window_Ver/SNAKE/: main_for_snake.h  snake.cpp
C++_sch_Project/Project_for_C++_Window_Ver/TETRIS/: main_for_tetris.h  tetrishello.cpp
C++_sch_Project/Project_for_C++_Window_Ver/Tic_Tac_Toe/: main_for_tic_tac_toe.h
C++_sch_Project/SNAKE/: Snake.h  main.cpp  snake
(+58 files in other folders)
